# SC203-Project-Week2

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  analyze_data.py  benchmark_run.sh  compile.sh  draft0-layout.md  generate_data.py  main.cpp  results_2023_12_06_09_40.tar.xz
data_generation/: generate_data.py  pyproject.toml
sort_algos/: counting_cocktail.cpp  enhanced.cpp  quicksort.cpp  sorting_algo.hpp  traditionals.cpp
