[tool.poetry]
name = "data-generation"
version = "0.1.0"
description = ""
authors = ["Rookie Nguyen <nguyenquocthang2004@gmail.com>"]
readme = "README.md"
packages = [{include = "data_generation"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
